--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link rel="icon" type="ico" sizes="32x32" href="/favicon_32x32.ico" />
+    <link rel="icon" type="ico" sizes="16x16" href="/favicon_16x16.ico" />
+    <title>Productivity</title>
   </head>
   <body>
     <div id="root"></div>
